<resources>
    <string name="app_name">Tea</string>
    <string name="action_settings">Settings</string>
    <string name="message">How do you want your tea?</string>
    <string name="temp">Temperature</string>
    <string name="cold">Cold</string>
    <string name="hot">Hot</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
</resources>
